[package]
name = "file-storage"
version = "0.1.0"
authors = ["buszk"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
tokio = { version = "1.8.0", features = ["macros", "rt-multi-thread"] }
warp = "0.3.1"
futures = "0.3.1"
file_diff = "1.0.0"
clap = "2.33.0"